Style the whole calculator project

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-    <p class="result"></p>
+    <div class="container">
+            <p class="result"></p>
     <p>
         <button class="js-calc-btn">1</button>
 
@@ -51,8 +52,9 @@
     </p>
 
     <p>
-        <button class="js-btn-clear">Clear</button>
+        <button class="js-btn-clear" id="btn-clear">Clear</button>
     </p>
+    </div>
 
     <script src="main.js"></script>
 </body>
